force-app/main/default/objects/RetailManagement__c/fields/WEB_BookRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>WEB_BookRegistrationDate__c</fullName>
    <description>山本</description>
    <label>WEB本登録日</label>
    <type>Date</type>
</CustomField>