force-app/main/default/objects/RetailManagement__c/fields/WEB_ProvisionalRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>WEB_ProvisionalRegistrationDate__c</fullName>
    <description>山本</description>
    <label>WEB仮登録日</label>
    <type>Date</type>
</CustomField>