force-app/main/default/objects/RetailManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>LotNo__c</columns>
    <columns>PurchasingPerson__c</columns>
    <columns>Stage__c</columns>
    <columns>ModelYearPicklist__c</columns>
    <columns>CarName__c</columns>
    <columns>CarNo__c</columns>
    <columns>Grade__c</columns>
    <columns>SalesStaff__c</columns>
    <columns>PlaceOfStorage__c</columns>
    <columns>Buyer__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>